--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "src/Typist"]
 	path = src/Typist
 	url = https://github.com/positionly/Typist.git
+[submodule "src/waypoints"]
+	path = src/waypoints
+	url = https://github.com/imakewebthings/waypoints.git
