--- a/.gitmodules
+++ b/.gitmodules
@@ -74,3 +74,6 @@
 	path = src/waypoints
 	url = https://github.com/imakewebthings/waypoints.git
 
+[submodule "src/WOW"]
+	path = src/WOW
+	url = https://github.com/matthieua/WOW.git
